# ChangeLog for dev-libs/libmemcached
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/libmemcached/ChangeLog,v 1.13 2009/07/06 09:43:58 robbat2 Exp $

*libmemcached-0.30 (06 Jul 2009)

  06 Jul 2009; Robin H. Johnson <robbat2@gentoo.org>
  +libmemcached-0.30.ebuild:
  Version bump.

*libmemcached-0.28 (05 May 2009)

  05 May 2009; Robin H. Johnson <robbat2@gentoo.org>
  +libmemcached-0.28.ebuild, +files/libmemcached-0.28-removebogustest.patch,
  +files/libmemcached-0.28-runtestsasuser.patch:
  Bug #267095: version bump. Testsuite now available thanks to patches from
  Johan Bergström <bugs@bergstroem.nu>.

*libmemcached-0.26 (04 Feb 2009)

  04 Feb 2009; Patrick Lauer <patrick@gentoo.org> +libmemcached-0.26.ebuild:
  Bump to 0.26, fixes #257521. Fixing deps as it won't build without
  memcached

  28 Dec 2008; Caleb Tennis <caleb@gentoo.org> -libmemcached-0.20.ebuild,
  -libmemcached-0.21.ebuild, -libmemcached-0.23.ebuild,
  +libmemcached-0.25.ebuild:
  remove some older versions

*libmemcached-0.25 (28 Dec 2008)

  28 Dec 2008; Caleb Tennis <caleb@gentoo.org> +libmemcached-0.25.ebuild:
  version bump

*libmemcached-0.23 (10 Oct 2008)

  10 Oct 2008; Robin H. Johnson <robbat2@gentoo.org>
  +libmemcached-0.23.ebuild:
  Version bump, resolves bug #240224 for CFLAGS.

*libmemcached-0.22 (15 Jul 2008)

  15 Jul 2008; Caleb Tennis <caleb@gentoo.org> +libmemcached-0.22.ebuild:
  version bump

*libmemcached-0.21 (24 May 2008)

  24 May 2008; Caleb Tennis <caleb@gentoo.org> -libmemcached-0.11.ebuild,
  -libmemcached-0.13.ebuild, -libmemcached-0.16.ebuild,
  -libmemcached-0.19.ebuild, +libmemcached-0.21.ebuild:
  version bump, remove old versions

*libmemcached-0.20 (05 May 2008)

  05 May 2008; Caleb Tennis <caleb@gentoo.org> +libmemcached-0.20.ebuild:
  version bump

*libmemcached-0.19 (23 Apr 2008)

  23 Apr 2008; Caleb Tennis <caleb@gentoo.org> +libmemcached-0.19.ebuild:
  version bump
