@@ -5,10 +5,12 @@ DIST libmemcached-0.25.tar.gz 430174 RMD160 76ec959f293d48fed7818ec7d373a1365ec1
 DIST libmemcached-0.26.tar.gz 443639 RMD160 6ac75e462eb5b062b5ea5310437b5a02f2ac3de5 SHA1 cc56e221536d046a191481172630ec6c0d37ed14 SHA256 aac6bdbe1cea98aa6fbcc3c6d7339180d96932b718a4a387aefbb56249a85cda
 DIST libmemcached-0.28.tar.gz 449919 RMD160 15729cc30af1e00d6c32a72c3627b95b41e3994b SHA1 3e022f51301a73ddfc3df32de5b748b19fd97c65 SHA256 f0087fd05eded2247ca74d03eef26f9bfab3e165d02279d92f7bc22dd8da1bf4
 DIST libmemcached-0.30.tar.gz 475185 RMD160 6f8b64a5bfa8e5cc1d728e7d2486c6b543d982c7 SHA1 d517d8af21adeb0518ff103a22ff1b649542d97a SHA256 c6ec03b82b228daa5eba21b288741b8b768267bd5495a11975d8036f2affcd2d
+DIST libmemcached-0.31.tar.gz 507156 RMD160 01a2c432fe08770c76516f033aaea0cb1c16fd2c SHA1 62d2922a121fa9b7cd28a4fdb26f688640131d60 SHA256 3999ee0c5950b19262db1057d6def676ff8bbf2efbae1df1e8a52dcbb4160e52
 EBUILD libmemcached-0.22.ebuild 735 RMD160 129043bc33e2f836aecd76dc9a2e194f99849695 SHA1 6234894f71bc949b26947111fe089117172c1f60 SHA256 2fb07943d52725e24621b8fff4ac74ae06090f66716fcf2017e3d079a89be7fe
 EBUILD libmemcached-0.25.ebuild 736 RMD160 b471a5bd4263e5a98e5c797d5fea98216fb7bdbb SHA1 0ed70159b4413f873138fd048e6c4e949f7d11a6 SHA256 e3178cb4ac5a43e03ac36306787e43257ffc37fa66fec036fba116f4322a6a08
 EBUILD libmemcached-0.26.ebuild 767 RMD160 b8b3e9458177435351e680bddb8d24d040de00e5 SHA1 4c053dd0523d660263909cac6449dbbd8efa1d68 SHA256 5c8f70d6ce8ae76be5858ca3630d4017465d6ed316474376ee9c600fba4cb93b
 EBUILD libmemcached-0.28.ebuild 997 RMD160 22289138c80a97276f6102f0f0e4a58fe06ba398 SHA1 ee26e932c96d51de8faf90105a9a5f1676f9611e SHA256 1f81ff7b9b47ac6823480b65e774273cf2b934c4caa35662b0d0fbc8fe52cb9c
 EBUILD libmemcached-0.30.ebuild 995 RMD160 ea92c75711505be25f9a36abc558179fec31053b SHA1 9904e33d64d29723ee7926e86d15a0ee60f20be9 SHA256 dcacc1eb7876798fc9a42e3adb03eb649850aa08c61e4a0063773d8fac0d827f
-MISC ChangeLog 2530 RMD160 ecd6b7820175ed9be329e2a1065e168ced118023 SHA1 5d0cdb94f3d8f48a8e2e4ef8e6180759be86668c SHA256 4ed323e5bf3143045d1f94c6ab28a7f9f730f0e1a2d94c70db70c74f44ae66f2
-MISC metadata.xml 468 RMD160 d2854b1985bfcc8a7059ae0c5f0428a071727221 SHA1 a8a2617adf767040c52a30239c3c289f35fdca5a SHA256 ac6dbfbc4a8acfc544391d20b90fb5f6faa8d2de992c81898ad5a4c25869f41f
+EBUILD libmemcached-0.31.ebuild 995 RMD160 e73a7c35ee50837a803ac597e8acaba8b825f1be SHA1 ef6ec36508608f260c9c361756fcaaa31635502a SHA256 fee3635c5388ddbb2b544f7affec0ba07adf4232f03f59bd5c19536dc87ba08e
+MISC ChangeLog 2690 RMD160 64a15de46f23b24a2497bd114cf27b41863a0609 SHA1 8eda7050139de39cc51182138d7b782048681305 SHA256 bec3930e1c128ace6af3d071b23ed11a961516cb0d29b9d2eb866bca566f88e1
+MISC metadata.xml 533 RMD160 5be167440d5b20b6cb80939c8d5ecee5803becdf SHA1 aa56bcf712d07eb333ec839e55b73559683ffc65 SHA256 4b0880adb97c588cf0893887736a5bc7bb3f60a0b38d307994a0700aec4786c6
